// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-6 {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  list-style: none;
}

.emotion-6:first-child {
  border-top: 1px solid #CFD9E0;
}

.emotion-4 {
  box-sizing: border-box;
  overflow: hidden;
  height: 0;
  -webkit-transition: height 0.2s ease-in-out,padding 0.2s ease-in-out;
  transition: height 0.2s ease-in-out,padding 0.2s ease-in-out;
}

.emotion-3 {
  width: 100%;
  padding: 0.5rem 1rem 1rem;
}

.emotion-5 {
  padding: 0;
  margin: 0;
  border-bottom: 1px solid #CFD9E0;
}

.emotion-5:first-child {
  border-top: 1px solid #CFD9E0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0;
  padding: 1rem;
  background-color: transparent;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 1rem;
  font-weight: 600;
  line-height: 1.5;
  color: #1B273A;
  width: 100%;
  cursor: pointer;
  -webkit-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-1:hover {
  background-color: #F7F9FA;
}

.emotion-1:focus {
  outline: none;
  background-color: #F7F9FA;
}

.emotion-2 {
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #111B2B;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-size: 1rem;
  line-height: 1.5rem;
}

.emotion-0 {
  display: inline-block;
  fill: #111B2B;
  height: 18px;
  width: auto;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
}

<ul
  class="emotion-6"
  data-test-id="cf-ui-accordion"
>
  <li
    class="emotion-5"
    data-test-id="cf-ui-accordion-item-id"
  >
    <h2
      class="emotion-2"
      data-test-id="cf-ui-subheading"
    >
      <button
        aria-controls="accordion-panel--id"
        aria-expanded="false"
        class="emotion-1"
        id="accordion--id"
        type="button"
      >
        <svg
          class="emotion-0"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 9 18"
          width="1em"
        >
          <path
            d="M1.1 5.9l3.4 3.4 3.4-3.4 1.1 1-4.5 4.5L0 6.9l1.1-1z"
          />
          <path
            d="M0 0h9v18H0V0z"
            fill="none"
          />
        </svg>
        Accordion Title
      </button>
    </h2>
    <div
      aria-hidden="true"
      aria-labelledby="accordion--id"
      class="emotion-4"
      id="accordion-panel--id"
      role="region"
    >
      <div
        class="emotion-3"
      >
        Accordion content
      </div>
    </div>
  </li>
</ul>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-6 {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  list-style: none;
}

.emotion-6:first-child {
  border-top: 1px solid #CFD9E0;
}

.emotion-4 {
  box-sizing: border-box;
  overflow: hidden;
  height: 0;
  -webkit-transition: height 0.2s ease-in-out,padding 0.2s ease-in-out;
  transition: height 0.2s ease-in-out,padding 0.2s ease-in-out;
}

.emotion-3 {
  width: 100%;
  padding: 0.5rem 1rem 1rem;
}

.emotion-5 {
  padding: 0;
  margin: 0;
  border-bottom: 1px solid #CFD9E0;
}

.emotion-5:first-child {
  border-top: 1px solid #CFD9E0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0;
  padding: 1rem;
  background-color: transparent;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 1rem;
  font-weight: 600;
  line-height: 1.5;
  color: #1B273A;
  width: 100%;
  cursor: pointer;
  -webkit-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-1:hover {
  background-color: #F7F9FA;
}

.emotion-1:focus {
  outline: none;
  background-color: #F7F9FA;
}

.emotion-2 {
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #111B2B;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-size: 1rem;
  line-height: 1.5rem;
}

.emotion-0 {
  display: inline-block;
  fill: #111B2B;
  height: 18px;
  width: auto;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
}

<ul
  class="emotion-6"
  data-test-id="cf-ui-accordion"
>
  <li
    class="emotion-5"
    data-test-id="cf-ui-accordion-item-id"
  >
    <h2
      class="emotion-2"
      data-test-id="cf-ui-subheading"
    >
      <button
        aria-controls="accordion-panel--id"
        aria-expanded="false"
        class="emotion-1"
        id="accordion--id"
        type="button"
      >
        <svg
          class="emotion-0"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 9 18"
          width="1em"
        >
          <path
            d="M1.1 5.9l3.4 3.4 3.4-3.4 1.1 1-4.5 4.5L0 6.9l1.1-1z"
          />
          <path
            d="M0 0h9v18H0V0z"
            fill="none"
          />
        </svg>
        Accordion Title
      </button>
    </h2>
    <div
      aria-hidden="true"
      aria-labelledby="accordion--id"
      class="emotion-4"
      id="accordion-panel--id"
      role="region"
    >
      <div
        class="emotion-3"
      >
        Accordion content
      </div>
    </div>
  </li>
</ul>
`;

exports[`renders the component with chevron on the left 1`] = `
.emotion-6 {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  list-style: none;
}

.emotion-6:first-child {
  border-top: 1px solid #CFD9E0;
}

.emotion-4 {
  box-sizing: border-box;
  overflow: hidden;
  height: 0;
  -webkit-transition: height 0.2s ease-in-out,padding 0.2s ease-in-out;
  transition: height 0.2s ease-in-out,padding 0.2s ease-in-out;
}

.emotion-3 {
  width: 100%;
  padding: 0.5rem 1rem 1rem;
}

.emotion-5 {
  padding: 0;
  margin: 0;
  border-bottom: 1px solid #CFD9E0;
}

.emotion-5:first-child {
  border-top: 1px solid #CFD9E0;
}

.emotion-2 {
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  color: #111B2B;
  font-size: 1.25rem;
  line-height: 2rem;
  text-rendering: optimizeLegibility;
  font-size: 1rem;
  line-height: 1.5rem;
}

.emotion-0 {
  display: inline-block;
  fill: #111B2B;
  height: 18px;
  width: auto;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s ease-in-out;
  -webkit-transition: transform 0.2s ease-in-out;
  transition: transform 0.2s ease-in-out;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0;
  padding: 1rem;
  background-color: transparent;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 1rem;
  font-weight: 600;
  line-height: 1.5;
  color: #1B273A;
  width: 100%;
  cursor: pointer;
  -webkit-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
  min-width: 9px;
  margin-right: 0.5rem;
}

.emotion-1:hover {
  background-color: #F7F9FA;
}

.emotion-1:focus {
  outline: none;
  background-color: #F7F9FA;
}

<ul
  class="emotion-6"
  data-test-id="cf-ui-accordion"
>
  <li
    class="emotion-5"
    data-test-id="cf-ui-accordion-item-id"
  >
    <h2
      class="emotion-2"
      data-test-id="cf-ui-subheading"
    >
      <button
        aria-controls="accordion-panel--id"
        aria-expanded="false"
        class="emotion-1"
        id="accordion--id"
        type="button"
      >
        <svg
          class="emotion-0"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 9 18"
          width="1em"
        >
          <path
            d="M1.1 5.9l3.4 3.4 3.4-3.4 1.1 1-4.5 4.5L0 6.9l1.1-1z"
          />
          <path
            d="M0 0h9v18H0V0z"
            fill="none"
          />
        </svg>
        Accordion Title
      </button>
    </h2>
    <div
      aria-hidden="true"
      aria-labelledby="accordion--id"
      class="emotion-4"
      id="accordion-panel--id"
      role="region"
    >
      <div
        class="emotion-3"
      >
        Accordion content
      </div>
    </div>
  </li>
</ul>
`;
